// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPageRenderer.js getHtmlProperties gets HTML properties 1`] = `
Object {
  "bodyAttrs": "",
  "head": 
<title data-react-helmet="true">
</title>
<link href="commonStyle"
      rel="stylesheet"
      key="0"
>
<link href="testStyle"
      rel="stylesheet"
      key="1"
>
,
  "htmlAttrs": "",
  "scripts": Object {
    "afterBody": Array [
      
<script type="text/javascript"
        src="https://cdn.polyfill.io/v2/polyfill.min.js?features="
>
</script>
,
      
<script type="text/javascript"
        src="commonJs"
>
</script>
,
      
<script type="text/javascript"
        src="testJs"
>
</script>
,
    ],
    "beforeBody": Array [],
  },
}
`;

exports[`getPageRenderer.js getPageRenderer renders html to a node stream 1`] = `

<html>
  <head>
    <title data-react-helmet="true">
    </title>
    <link href="commonStyle"
          rel="stylesheet"
          key="0"
    >
    <link href="testStyle"
          rel="stylesheet"
          key="1"
    >
  </head>
  <body>
    <script type="text/javascript">
      window.__INITIAL_STATE__ = undefined;
    </script>
    <div id="app">
    </div>
    <script type="text/javascript"
            src="https://cdn.polyfill.io/v2/polyfill.min.js?features="
    >
    </script>
    <script type="text/javascript"
            src="commonJs"
    >
    </script>
    <script type="text/javascript"
            src="testJs"
    >
    </script>
  </body>
</html>

`;

exports[`getPageRenderer.js getPageRenderer renders html to a node stream 2`] = `

<html>
  <head>
    <title data-react-helmet="true">
    </title>
    <link href="commonStyle"
          rel="stylesheet"
          key="0"
    >
    <link href="testStyle"
          rel="stylesheet"
          key="1"
    >
  </head>
  <body>
    <script type="text/javascript">
      window.__INITIAL_STATE__ = undefined;
    </script>
    <div id="app">
    </div>
    <script type="text/javascript"
            src="https://cdn.polyfill.io/v2/polyfill.min.js?features="
    >
    </script>
    <script type="text/javascript"
            src="commonJs"
    >
    </script>
    <script type="text/javascript"
            src="testJs"
    >
    </script>
  </body>
</html>

`;

exports[`getPageRenderer.js getPageRenderer renders html to a promise 1`] = `

<html>
  <head>
    <title data-react-helmet="true">
    </title>
    <link href="commonStyle"
          rel="stylesheet"
          key="0"
    >
    <link href="testStyle"
          rel="stylesheet"
          key="1"
    >
  </head>
  <body>
    <script type="text/javascript">
      window.__INITIAL_STATE__ = undefined;
    </script>
    <div id="app">
    </div>
    <script type="text/javascript"
            src="https://cdn.polyfill.io/v2/polyfill.min.js?features="
    >
    </script>
    <script type="text/javascript"
            src="commonJs"
    >
    </script>
    <script type="text/javascript"
            src="testJs"
    >
    </script>
  </body>
</html>

`;

exports[`getPageRenderer.js getPageRenderer renders html to a promise 2`] = `

<html>
  <head>
    <title data-react-helmet="true">
    </title>
    <link href="commonStyle"
          rel="stylesheet"
          key="0"
    >
    <link href="testStyle"
          rel="stylesheet"
          key="1"
    >
  </head>
  <body>
    <script type="text/javascript">
      window.__INITIAL_STATE__ = undefined;
    </script>
    <div id="app">
    </div>
    <script type="text/javascript"
            src="https://cdn.polyfill.io/v2/polyfill.min.js?features="
    >
    </script>
    <script type="text/javascript"
            src="commonJs"
    >
    </script>
    <script type="text/javascript"
            src="testJs"
    >
    </script>
  </body>
</html>

`;
